# phone-info

./: .editorconfig  .gitignore  .pylintrc  README.md  local.override.yml.example  local.yml  pyproject.toml  requirements.txt  setup.cfg
.envs/.local/: .django  .postgres
compose/django/: entrypoint
compose/django/local/: Dockerfile
compose/django/local/celery/beat/: start
compose/django/local/celery/worker/: start
src/django/phone_info/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/django/phone_info/core/: __init__.py  apps.py
src/django/phone_info/core/db/: utils.py
src/django/phone_info/phone_numbering/: __init__.py  apps.py  helpers.py  models.py  workers.py
src/django/phone_info/phone_numbering/api/: urls.py  views.py
src/django/phone_info/phone_numbering/management/commands/: refreshphonenumbering.py
src/django/phone_info/phone_numbering/migrations/: 0001_initial.py
src/django/phone_info/phone_numbering/templates/: phone_info.html
src/django/phone_info/phone_numbering/web/: forms.py  urls.py  views.py
src/django/phone_info/templates/: base.html
